spade-tests/src/snapshots/spade_tests__parser__functions_do_not_allow_inst_pipeline.snap
---
source: spade-tests/src/parser.rs
---
pipeline(2) P() -> bool {
    reg;
        false
}

fn X() -> bool {
    inst(2) Y()
}


error: cannot instantiate entities and pipelines in functions
  ┌─ testinput:7:5
  │
6 │ fn X() -> bool {
  │ -- this is a function
7 │     inst(2) Y()
  │     ^^^^ inst not allowed here
  │
  = note: functions can only contain combinatorial logic
  = consider making the function an entity
  │
6 │ entity X() -> bool {
  │ ~~~~~~

error: Missing clock argument for pipeline
  ┌─ testinput:1:14
  │
1 │ pipeline(2) P() -> bool {
  │              ^^
  │
  = note: All pipelines need to take at least a clock as an argument
