spade-tests/src/snapshots/spade_tests__parser__good_eof_error_on_missing_dot_continuation.snap
---
source: spade-tests/src/parser.rs
---
fn a() -> bool { a.

error: Unexpected `end of file`, expected `expression`
  ┌─ testinput:1:20
  │
1 │ fn a() -> bool { a.
  │                    ^ expected `expression`
