spade-tests/src/snapshots/spade_tests__parser__good_error_on_unexpected_body.snap
---
source: spade-tests/src/parser.rs
---
entity a() -> bool struct

error: Unexpected `struct`, expected body or `__builtin__`
  ┌─ testinput:1:20
  │
1 │ entity a() -> bool struct
  │ ------------------ ^^^^^^ Unexpected struct
  │ │                   
  │ Expected body for this entity

error: Unexpected `end of file`, expected `Identifier`
  ┌─ testinput:1:26
  │
1 │ entity a() -> bool struct
  │                          ^ expected `Identifier`
