spade-tests/src/snapshots/spade_tests__parser__incorrect_named_args_gives_good_error.snap
---
source: spade-tests/src/parser.rs
---
struct S { a: bool }
fn f(a: bool) -> bool {
    a
}
fn s() -> S {
    S { a = true }
}
fn c() -> bool {
    f(a = true)
}


error: Unexpected `=`, expected `:`, `,`, or `}`
  ┌─ testinput:6:11
  │
6 │     S { a = true }
  │           ^ expected `:`, `,`, or `}`
  │
  = named arguments are specified with `:`
  │
6 │     S { a : true }
  │           ~

error: Unexpected `=`, expected `:`, `,`, or `)`
  ┌─ testinput:9:9
  │
9 │     f(a = true)
  │         ^ expected `:`, `,`, or `)`
  │
  = named arguments are specified with `:`
  │
9 │     f(a : true)
  │         ~
